[package]
name = "penumbra-cometstub"
version = "0.64.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["component", "std"]
component = [
    # "cnidarium",
    # "cnidarium-component",
    # "penumbra-proto/cnidarium",
    # "penumbra-chain/component",
]
std = ["ibc-types/std"]

[dependencies]
# Workspace dependencies

# Penumbra dependencies
ibc-proto = { version = "0.40.0", default-features = false }
ibc-types = { version = "0.11.0", default-features = false }

# Crates.io deps
anyhow = "1"
tendermint = "0.34.0"
# tendermint-proto = "0.34.0"
tendermint-light-client-verifier = "0.34.0"

[dev-dependencies]
cnidarium = { path = "../../cnidarium" }
cnidarium-component = { path = "../../cnidarium-component" }
penumbra-app = { path = "../../core/app" }
penumbra-chain = { path = "../../core/component/chain", features = ["component"] }
penumbra-compact-block = { path = "../../core/component/compact-block" }
penumbra-keys = { path = "../../core/keys" }
penumbra-sct = { path = "../../core/component/sct" }
penumbra-shielded-pool = { path = "../../core/component/shielded-pool", features = ["component"] }
penumbra-txhash = { path = "../../core/txhash" }
rand_chacha = "0.3"
rand_core = "0.6"
tokio = { version = "1.21.1", features = ["full", "tracing"] }
